subprojects/pclc/test/errors/rename.pcl
// RUN: not pclc %s

func() : test {
  return 1;
}

test = test;
